force-app/main/default/objects/Passenger__c/fields/Age_of_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Passenger__c</fullName>
    <formula>FLOOR((TODAY() -  Date_of_Birth__c) / 365.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Passenger (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>