force-app/main/default/objects/Passenger__c/fields/AirLine__c.field-meta.xml
<CustomField>
    <fullName>AirLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AirLine</label>
    <referenceTo>AirLIne__c</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <type>Lookup</type>
</CustomField>