force-app/main/default/objects/Passenger__c/fields/Any_Ongoing_Warrant__c.field-meta.xml
<CustomField>
    <fullName>Any_Ongoing_Warrant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Ongoing Warrant?</label>
    <type>Checkbox</type>
</CustomField>