force-app/main/default/objects/Passenger__c/fields/Delhi_Flight_Count__c.field-meta.xml
<CustomField>
    <fullName>Delhi_Flight_Count__c</fullName>
    <label>Delhi Flight Count</label>
    <summaryFilterItems>
        <field>Book_Flight__c.Flight_From__c</field>
        <operation>equals</operation>
        <value>delhi</value>
    </summaryFilterItems>
    <summaryForeignKey>Book_Flight__c.Passenger__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>